# magma_engine

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake.yml
data/: config.json
include/app/: App.h  UI.h  camera.h  image.h  log.hpp  logger.hpp  textureDump.h
include/app/config/: config.h  json.h
include/app/gui/: GUI.h
include/app/render/: depthPass.h
include/app/scene/: mesh.h  meshReader.h
include/magma/app/: App.h  Camera.h  Keyboard.h  Mouse.h  Option.hpp  camera.h  errors.h  image.h  keyboard.h  log.hpp  mouse.h
include/magma/app/compute/: ComputePass.h
include/magma/app/config/: JSON.h
include/magma/app/postProcess/: MotionVector.h  TemporalReproject.h
include/magma/app/render/: DepthPass.h  GBuffer.h  GBufferResolve.h  MainColorPass.h  SwapChainImageSupplier.h  colorPass.h  depthPass.h
include/magma/app/scene/: directLight.h  mesh.h  meshReader.h
include/magma/vk/: CmdSync.h  ComputePipeline.h  Context.h  Extensions.h  FrameBuffer.h  LogicalDevice.h  ShaderModule.h  SwapChain.h  Texture.h  TextureManager.h  Window.h  commandBuffer.h  commandPool.h  graphicsPipeline.h  logicalDevice.h  logicalDevice.hpp  physicalDevice.h  shaderModule.h  swapChain.h  validationLayers.h  vkInstanceHolder.h  vulkan_common.h  window.h
include/magma/vk/attachments/: AttachmentDescription.h  RenderPassAttachments.h
include/magma/vk/buffers/: Buffer.h  BufferManager.h  BufferManager.hpp
include/magma/vk/commands/: CommandBuffer.h  CommandBufferArr.h  CommandPool.h  SingleTimeCommandBuffer.h
include/magma/vk/descriptors/: DescriptorPool.h  DescriptorSetInfo.h  DescriptorSetLayout.h  DescriptorSetLayoutInfo.h  descriptorSetLayout.h
include/magma/vk/physicalDevice/: DeviceRequirements.h  HardwareManager.h  PhysicalDevice.h
include/magma/vk/pipeline/: ComputePipeline.h  GraphicsPipeline.h  PipelineInfo.h
include/magma/vk/textures/: CombinedImageSampler.h  CustomImageView.h  ImageView.h  TexPyramid.h  Texture.h  TextureManager.h
include/magma/vk/validationLayers/: DebugMessenger.h  ValidationLayers.h
include/vk/: commandBuffer.h  graphicsPipeline.h  swapChain.h
include/vk/descriptors/: descriptorPool.h
include/vk3d/app/: App.h  camera.h  clock.h  log.hpp  mouse.h
include/vk3d/app/render/: colorPass.h  depthPass.h
include/vk3d/app/scene/: directLight.h  mesh.h  meshReader.h
include/vk3d/vk/: logicalDevice.hpp  window.h
include/vk3d/vk/descriptors/: descriptorSetLayout.h
include/vtb/app/: App.h  camera.h  log.hpp  mouse.h
include/vtb/app/config/: JSON.h
include/vtb/app/render/: colorPass.h  depthPass.h
include/vtb/app/scene/: directLight.h  mesh.h  meshReader.h
include/vtb/vk/: vk_extensions.h  window.h
include/vtb/vk/descriptors/: descriptorPool.h
shaders/: CMakeLists.txt  depth.vert  gBufferResolve.frag  imageProcess.vert  mainColorPass.frag  mainColorPass.vert  motionVector.comp  shader.frag  shader.vert  temporalAddData.comp  temporalReproject.comp  temporalReproject2.comp  temporalReprojectOld.comp  temporalResolve.comp
shaders/blur/: gauss_h.frag  gauss_v.frag
shaders/ssao/: depthGather.frag  depthGatherFirstStep.frag  hbao.frag  pyramidSSAO.frag
src/: glm_inc.h  main.cpp  main_for_test.cpp
src/app/: App.cpp  App.h  UI.cpp  camera.cpp  clock.cpp  clock.h  image.cpp  image.h  keyBoard.cpp  keyboard.cpp  log.cpp  mouse.cpp  mouse.h  textureDump.cpp
src/app/gui/: GUI.cpp
src/app/render/: colorPass.cpp  colorPass.h  depthPass.cpp  depthPass.h
src/app/scene/: directLight.cpp  directLight.h  mesh.cpp  meshReader.cpp
src/hw_app/: HelloWorldApp.h
src/magma/app/: App.cpp  Camera.cpp  Keyboard.cpp  Mouse.cpp  camera.cpp  clock.cpp  image.cpp  keyboard.cpp  log.cpp  mouse.cpp
src/magma/app/compute/: ComputePass.cpp
src/magma/app/config/: JSON.cpp
src/magma/app/postProcess/: MotionVector.cpp  TemporalReproject.cpp
src/magma/app/render/: DepthPass.cpp  GBuffer.cpp  GBufferResolve.cpp  MainColorPass.cpp  SwapChainImageSupplier.cpp  colorPass.cpp  depthPass.cpp
src/magma/app/scene/: directLight.cpp  mesh.cpp  meshReader.cpp
src/magma/vk/: CmdSync.cpp  ComputePipeline.cpp  Context.cpp  Extensions.cpp  FrameBuffer.cpp  LogicalDevice.cpp  ShaderModule.cpp  SwapChain.cpp  Texture.cpp  TextureManager.cpp  Window.cpp  cmdSync.cpp  commandBuffer.cpp  commandPool.cpp  frameBuffer.cpp  graphicsPipeline.cpp  logicalDevice.cpp  physicalDevice.cpp  renderPass.cpp  shaderModule.cpp  swapChain.cpp  texture.cpp  validationLayers.cpp  vkInstanceHolder.cpp  vk_extensions.cpp  vulkan_common.cpp  window.cpp
src/vk/: buffer.h  cmdSync.cpp  cmdSync.h  commandBuffer.cpp  commandBuffer.h  commandPool.cpp  commandPool.h  frameBuffer.cpp  frameBuffer.h  graphicsPipeline.cpp  graphicsPipeline.h  logicalDevice.cpp  logicalDevice.h  physicalDevice.cpp  physicalDevice.h  renderPass.cpp  renderPass.h  shaderModule.cpp  shaderModule.h  swapChain.cpp  swapChain.h  texture.cpp  texture.h  validationLayers.cpp  validationLayers.h  vkInstanceHolder.cpp  vk_extentions.cpp  vulkan_common.cpp  vulkan_common.h  window.cpp  window.h
src/vk/descriptors/: descriptorPool.cpp  descriptorSetInfo.cpp  descriptorSetInfo.h  descriptorSetLayout.cpp  descriptorSetLayout.h
src/vk3d/app/: App.cpp  camera.cpp  clock.cpp  image.cpp  keyboard.cpp  log.cpp  mouse.cpp
src/vk3d/vk/: cmdSync.cpp  commandBuffer.cpp  commandPool.cpp  frameBuffer.cpp  graphicsPipeline.cpp  logicalDevice.cpp  physicalDevice.cpp  renderPass.cpp  shaderModule.cpp  swapChain.cpp  texture.cpp  validationLayers.cpp  vkInstanceHolder.cpp  vk_extentions.cpp  vulkan_common.cpp  window.cpp
src/vtb/app/: App.cpp  camera.cpp  clock.cpp  image.cpp  keyboard.cpp  log.cpp  mouse.cpp
src/vtb/vk/: cmdSync.cpp  commandBuffer.cpp  commandPool.cpp  frameBuffer.cpp  graphicsPipeline.cpp  logicalDevice.cpp  physicalDevice.cpp  renderPass.cpp  shaderModule.cpp  swapChain.cpp  texture.cpp  validationLayers.cpp  vkInstanceHolder.cpp  vk_extensions.cpp  vulkan_common.cpp  window.cpp
test/: CMakeLists.txt  test_config.cpp  test_logger.cpp  test_main.cpp
(+55 files in other folders)
